# emuboy

./: .gitignore  BGMapViewer.cpp  BGMapViewer.hpp  CMakeLists.txt  CMakePresets.json  Emulator.cpp  Emulator.hpp  EmulatorWindow.cpp  EmulatorWindow.hpp  FIFO_pixel.hpp  Makefile  Readme.md  VRAMViewer.cpp  VRAMViewer.hpp  Window.cpp  Window.hpp  WindowManager.cpp  WindowManager.hpp  bg_map_renderer.cpp  bg_map_renderer.hpp  bus.cpp  bus.hpp  config.h  config.hpp  cpp.hint  cpu.cpp  cpu.hpp  cpu_instructions.cpp  cputest.cpp  dma_controller.cpp  dma_controller.hpp  emuboy.cpp  emuboy.sln  emuboy.vcxproj  emuboy.vcxproj.filters  fetch_decode_execute.cpp  fetcher.cpp  fetcher.hpp  fifo.cpp  fifo.hpp  (+16 more)
docs/: gamepak.docx
include/: BGMapViewer.hpp  FIFO_pixel.hpp  bus.hpp  cpu.hpp  dma_controller.hpp  gamepak.hpp  joypad_mapping.hpp  ppu.hpp  stack.hpp
roms/: POKEMON YELLOW.sav  TETRIS.sn1
src/core/: CMakeLists.txt  MBC.cpp  MBC1.cpp  MBC2.cpp  MBC3.cpp  MBC5.cpp  MBC_ROM_ONLY.cpp  NO_MBC.cpp  bus.cpp  cpu.cpp  fifo.cpp  gamepak.cpp  ppu.cpp
src/core/include/: FIFO_pixel.hpp  MBC.hpp  MBC1.hpp  MBC2.hpp  MBC3.hpp  MBC5.hpp  MBC_ROM_ONLY.hpp  NO_MBC.hpp  bus.hpp  config.hpp  cpu.hpp  fifo.hpp  gamepak.hpp  ppu.hpp
src/gui/: BGMapViewer.cpp  CMakeLists.txt  EmulatorWindow.cpp  VRAMViewer.cpp  Window.cpp  WindowManager.cpp
src/gui/include/: BGMapViewer.hpp  EmulatorWindow.hpp  VRAMViewer.hpp  Window.hpp  WindowManager.hpp  joypad.hpp
tests/: CMakeLists.txt  cpu_sm83_test.cpp  cpu_test.cpp  heap_vs_stack.cpp  multiply_test.cpp  timer_test.cpp
tests/SM83_tests/: CMakeLists.txt  sm83_tests.cpp
tests/include/: dummy_bus.hpp
